--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@ body {
 }
 
 h1 {
-  color: lightblue;
+  color: white;
   text-align: center;
 }
 
@@ -14,4 +14,8 @@ p {
 
 #NavBar {
   background-colour: red;
+}
+
+#PageTitle {
+  background-colour: green;
 }
