--- a/index.css
+++ b/index.css
@@ -1,7 +1,3 @@
-body {
-  background-color: lightblue;
-}
-
 h1 {
   color: white;
   text-align: center;
@@ -16,6 +12,6 @@ p {
   background-colour: red;
 }
 
-#"PageTitle" {
+#PageTitle {
   background-colour: green;
 }
