--- a/index.css
+++ b/index.css
@@ -1,3 +1,16 @@
+body {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+}
+
+#NavBar {
+    background-color: blue;
+    width: 100vw;
+    height: 50px;
+    
+}
+
 h1 {
   color: white;
   text-align: center;
@@ -6,12 +19,4 @@ h1 {
 p {
   font-family: verdana;
   font-size: 20px;
-}
-
-#NavBar {
-  colour: red;
-}
-
-#PageTitle {
-  background-colour: green;
 }
