--- a/index.css
+++ b/index.css
@@ -11,6 +11,11 @@ body {
     
 }
 
+#PageTitle {
+    background-colour: red;
+    width: 100vw;
+    height: 25px;
+
 h1 {
   color: white;
   text-align: center;
