--- a/index.css
+++ b/index.css
@@ -12,7 +12,7 @@ body {
 }
 
 #PageTitle {
-    background-colour: "#FF0000";
+    background-colour: #FF0000;
     width: 100vw;
     height: 25px;
 }
