--- a/index.css
+++ b/index.css
@@ -6,8 +6,11 @@ body {
 
 #NavBar {
     background-color: blue;
+    margin: 0;
+    padding: 0;
     width: 100vw;
     height: 50px;
+    list-style-type: none;
     
 }
 
