--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@ body {
 
 #NavBar {
     background-color: blue;
-    colour: "#FF0000";
+    color: "#FF0000";
     margin: 0;
     padding: 0;
     width: 100vw;
