--- a/index.css
+++ b/index.css
@@ -11,8 +11,31 @@ body {
     padding: 0;
     width: 100vw;
     height: 50px;
-    list-style-type: none;
+}
+
+#NavList {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333333;
     
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #111111;
 }
 
 #PageTitle {
